--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@material/tab-bar": "^11.0.0",
+    "@material/tabs": "^2.3.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "crypto-js": "^4.0.0",
+    "noble-secp256k1": "^1.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "secp256k1": "^4.0.2",
+    "start": "^5.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
